--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
             android:label="Start Listening"
             android:launchMode="singleInstance"
             android:noHistory="true"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name=".StopListeningActivity"
             android:excludeFromRecents="true"
@@ -71,7 +71,7 @@
             android:label="Stop Listening"
             android:launchMode="singleInstance"
             android:noHistory="true"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name=".WakeupActivity"
             android:clearTaskOnLaunch="true"
@@ -79,7 +79,7 @@
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:noHistory="true"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <service
             android:name=".CheckIfAppBlackListedService"
