--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/IntroTheme">
@@ -37,27 +37,27 @@
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"/>
 
         <service
-            android:name=".MyService"
+            android:name=".services.MyService"
             android:enabled="true"
             android:exported="true" />
 
         <service
-            android:name=".CheckIfMusicPlayingService"
+            android:name=".services.CheckIfMusicPlayingService"
             android:enabled="true"
             android:exported="false" />
 
         <receiver
-            android:name=".ScreenReceiver"
+            android:name=".receivers.ScreenReceiver"
             android:enabled="true"
             android:exported="true" />
 
         <activity
-            android:name=".StartListeningActivity"
+            android:name=".activities.StartListeningActivity"
             android:excludeFromRecents="true"
             android:exported="true"
             android:label="Start Listening"
@@ -65,7 +65,7 @@
             android:noHistory="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
-            android:name=".StopListeningActivity"
+            android:name=".activities.StopListeningActivity"
             android:excludeFromRecents="true"
             android:exported="true"
             android:label="Stop Listening"
@@ -73,7 +73,7 @@
             android:noHistory="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
-            android:name=".WakeupActivity"
+            android:name=".activities.WakeupActivity"
             android:clearTaskOnLaunch="true"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
@@ -82,17 +82,17 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <service
-            android:name=".CheckIfAppBlackListedService"
+            android:name=".services.CheckIfAppBlackListedService"
             android:enabled="true"
             android:exported="false" />
 
         <receiver
-            android:name=".KeyguardReceiver"
+            android:name=".receivers.KeyguardReceiver"
             android:enabled="true"
             android:exported="true" />
 
         <service
-            android:name=".ScreenReceiversService"
+            android:name=".services.ScreenReceiversService"
             android:enabled="true"
             android:exported="true" />
 
